# context-reference-count

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  idea.md  intro.md  pyproject.toml  test-docker-compose.yml
benchmarks/: .env.example  README.md  __init__.py  benchmark.py  executor.py  run.py  toolbench.py
examples/: basic_cache.py  config_example.py  langgraph_example.py
src/context_ref/: __init__.py  api.py
src/context_ref/core/: __init__.py  cache.py  config.py  models.py  utils.py
src/context_ref/core/storage/: __init__.py  chroma.py  config.py  memory.py  redis.py  vector.py
src/context_ref/embedding/: __init__.py  base.py  default.py
src/context_ref/interceptor/: __init__.py  wrapper.py
src/context_ref/utils/: __init__.py  serialization.py
tests/: __init__.py  conftest.py  test_benchmark.py  test_cache.py  test_config.py  test_decision.py  test_interceptor.py  test_models.py
